      strings.

    o merge_motifs(): a message regarding adding pseudocounts to the motifs
      is given if one of ALLR/ALLR_LL/KL are used as comparison method.

    o merge_motifs(..., new.name) option: assign a name to the new merged motif
      instead of collapsing the names of the merged motifs together.

    o Some cleanup to documentation and vignettes.

    o General code cleanup.

CHANGES IN VERSION 1.4.10
-------------------------

BUG FIXES

    o Updated the warning from v1.4.9 to make users aware that the daylight
      layout will be permanently disabled for Bioconductor 3.10.

CHANGES IN VERSION 1.4.9
------------------------

BUG FIXES

  o Temporarily disabling the 'daylight' layout for motif_tree() to get
    around a new bug.

CHANGES IN VERSION 1.4.8
------------------------

BUG FIXES

    o Fixed buffer overflow error in motif_peaks().

CHANGES IN VERSION 1.4.7
------------------------

BUG FIXES

    o Fixed dangling references in compare_motifs_helper.cpp and
      utils-exported.cpp.

    o Trying to subset a motif to a single column no longer throws an error.

CHANGES IN VERSION 1.4.6
------------------------

BUG FIXES

    o scan_sequences(): will now actually emit a warning when non-standard
      letters are detected.

CHANGES IN VERSION 1.4.5
------------------------

BUG FIXES

    o run_meme(): don't try and delete R's tempdir.

CHANGES IN VERSION 1.4.4
------------------------

BUG FIXES

    o Minor fix to how args are fed to processx::run() in run_meme().

CHANGES IN VERSION 1.4.3
------------------------

BUG FIXES

    o Suppress message output from library(TFBSTools) call in
      MotifManipulation.pdf vignette preamble code.

CHANGES IN VERSION 1.4.2
------------------------

BUG FIXES

    o Stopped using BiocStyle, as a current bug was preventing the package from
      building successfully.

CHANGES IN VERSION 1.4.1
------------------------

BUG FIXES
